# finance-helper

./: .gitignore  README.md
.github/: dependabot.yml  publish.yml
.github/workflows/: ci-node.yml  ci-python.yaml  ci-python.yml  dependabot-auto-merge.yml  publish-tmp.yml  publish.yml
docs/node/fidelity-helper/: hierarchy.html  index.html
docs/node/fidelity-helper/assets/: highlight.css  navigation.js  search.js
docs/node/fidelity-helper/classes/: Fidelity.html
docs/node/fidelity-helper/interfaces/: Account.html  Transaction.html
docs/node/fidelity-helper/types/: EvaluateFunc.html
docs/python/fidelity-helper/: fidelity_helper.html  index.html  search.js
fidelity-templates/: getAccountsOptions.json  getTransactionsBody.json.mustache  getTransactionsOptions.json.mustache
fidelity-testdata/: config_1.json  get_transactions_expected.json  get_transactions_expected_1.json  mock_get_accounts_response_1.json  mock_get_transactions_response.json  mock_get_transactions_response_1.json
node/: .gitignore  .npmignore
node/fidelity-example/: README.md  package.json  tsconfig.json
node/fidelity-example/src/: fidelity-example.ts
node/fidelity-helper/: .pnp.cjs  .yarnrc.yml  DEVELOPING.md  README.md  fidelity-templates  package.json  tsconfig.json  typedoc.json
node/fidelity-helper/src/: fidelity-models.ts  fidelity.ts  index.ts
node/fidelity-helper/tests/: fidelity.test.ts  testdata
python/fidelity-example/: README.md  fidelity_example.py  pyproject.toml
python/fidelity-helper/: DEVELOPING.md  LICENSE  README.md  pyproject.toml  testdata
python/fidelity-helper/src/fidelity_helper/: __init__.py  fidelity-templates  fidelity.py  fidelity_models.py
python/fidelity-helper/tests/: test_fidelity.py
scripts/: bump_version.py  latest_tag.py
