[project]
name = "fidelity-example"
version = "0.1.1"
description = "Example of using fidelity-helper"
license = "MIT"
authors = [
  { name = "Ted Romer", email = "tromer@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fidelity-helper>=0.1.1",
    "zendriver>=0.15.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ruff>=0.14.10",
]

[tool.ruff.lint]

select = [
  "ALL",
]

ignore = [
  "COM812", # missing-trailing-comma -- let the formatter deal with it
  "D",      # pydocstyle
  "D203",   # incorrect-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "FIX002", # line-contains-todo
  "SLF001", # Private member accessed -- handled by basedpyright
  "T201",   # print
  "TC006",  # runtime-cast-value
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2
