[project]
name = "fidelity-helper"
version = "0.1.1"
description = "Fetch Fidelity transactions"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
  { name = "Ted Romer", email = "tromer@gmail.com" }
]
keywords = [ "banking", "fidelity", "finance"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "pydantic>=2.12.5",
  "pystache>=0.6.8",
]

[project.urls]
Homepage = "https://github.com/righteffort/finance-helper/tree/main/python/fidelity-helper"
Source = "https://github.com/righteffort/finance-helper.git"
Documentation = "https://righteffort.github.io/finance-helper/python/fidelity-helper"
Issues = "https://github.com/righteffort/finance-helper/issues"

[dependency-groups]
dev = [
  "aiofiles>=25.1.0",
  "basedpyright>0",
  "pdoc>=16.0.0",
  "pytest>0",
  "pytest-asyncio>=1.3.0",
  "ruff>0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fidelity_helper"]
exclude = ["fidelity-templates"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]
exclude = [
  "/src/fidelity_helper/fidelity-templates"
]

[tool.hatch.build.targets.wheel.force-include]
"../../fidelity-templates" = "fidelity_helper/fidelity-templates"

[tool.hatch.build.targets.sdist.force-include]
"../../fidelity-templates" = "fidelity_helper/fidelity-templates"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
]

[tool.pyright]
typeCheckingMode = "recommended"
reportUnannotatedClassAttribute = false

[tool.ruff.lint]

select = [
  "ALL",
]

ignore = [
  "COM812", # missing-trailing-comma -- let the formatter deal with it
  "D203",   # incorrect-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "FIX002", # line-contains-todo
  "SLF001", # Private member accessed -- handled by basedpyright
  "TC006",  # runtime-cast-value
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004", "S101"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2
